Fixed overflow position

--- a/app/theme/client/imports/components/popover.css
+++ b/app/theme/client/imports/components/popover.css
@@ -34,7 +34,12 @@
 
 		display: flex;
 
+		overflow: auto;
+
+		flex-direction: column;
+
 		height: auto;
+
 		max-height: 70%;
 
 		padding: var(--popover-padding);
@@ -52,7 +57,6 @@
 
 	&__column {
 		display: flex;
-		overflow: auto;
 		flex-direction: column;
 		flex: 1 0 auto;
 
